fix stretching

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,10 @@
 }
 
 .result{
-  width: 78%;
+  width: 80%;
+  max-width: 90%;
   height: 90px;
   padding-top: 20px;
-  padding-right: 2%;
   background-color: #D9D9D9;
   border-radius: 10px;
   margin: auto;
@@ -21,5 +21,5 @@
 
 .top{
   display: flex;
-
+  max-width: 810px;
 }
