--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,7 @@
 button{
     height: 120px;
     width: 21%;
+    max-width: 165px;
     background-color: #D9D9D9;
     border-radius: 10px;
     border: none;
