--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,7 @@ body {
   font-family: 'Inter', sans-serif;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto', sans-serif;
-  max-width: 100vw;
+  color: #1F1F1F;
+  object-fit: cover;
+  overflow: hidden;
 }
